statum-macros/tests/ui/invalid_transition_no_methods.stderr
error: Error: #[transition] impl for `Machine<A>` must contain at least one method returning `Machine<NextState>` or a supported wrapper like `Option<Machine<NextState>>` / `Result<Machine<NextState>, E>`.
  --> tests/ui/invalid_transition_no_methods.rs:22:6
   |
22 | impl Machine<A> {}
   |      ^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_no_methods.rs:22:19
   |
22 | impl Machine<A> {}
   |                   ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_no_methods.rs`
